Fix for UNION and LEFT JOIN (Bug #386) Fixed wrong logging of Access denied error (Bug #398)